Migrate away from Collections.singleton