@@ -17,7 +17,6 @@
 package org.apache.solr.response.transform;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import org.apache.solr.common.SolrDocument;
@@ -123,7 +122,7 @@ public class RawValueTransformerFactory extends TransformerFactory
 
     @Override
     public Collection<String> getRawFields() {
-      return Collections.singleton(display);
+      return Set.of(display);
     }
 
     @Override
