@@ -32,6 +32,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.util.CommandOperation;
@@ -139,7 +140,7 @@ public class TestUtils extends SolrTestCaseJ4 {
         new ContentStreamBase.ByteArrayStream(baos.toByteArray(), null, "application/javabin");
     List<CommandOperation> commands =
         CommandOperation.readCommands(
-            Collections.singletonList(stream), new NamedList<>(), Collections.singleton("single"));
+            Collections.singletonList(stream), new NamedList<>(), Set.of("single"));
 
     assertEquals(5, commands.size());
   }
